--- a/css/style.css
+++ b/css/style.css
@@ -992,12 +992,8 @@ body {
       margin-bottom: 6rem; } }
   @media only screen and (max-width: 56.25em) {
     .row {
-      max-width: 60rem;
-      padding: 0 3rem; } }
-  @media only screen and (max-width: 56.25em) {
-    .row {
       max-width: 50rem;
-      padding: 0 2rem; } }
+      padding: 0 3rem; } }
   .row::after {
     content: "";
     display: table;
@@ -1041,8 +1037,7 @@ body {
   @media only screen and (max-width: 56.25em) {
     .header {
       height: 95vh;
-      border-radius: 10% 9% 26% / 0% 0% 0% 13%;
-      background-position: center; } }
+      border-radius: 10% 9% 26% / 0% 0% 0% 13%; } }
   @media only screen and (max-width: 37.5em) {
     .header {
       border-radius: 10% 21% 26% / 0% 0% 0% 13%; } }
