--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,9 @@
   @media only screen and (max-width: 56.25em) {
     :root {
       font-size: 50%; } }
+  @media only screen and (max-width: 37.5em) {
+    :root {
+      font-size: 36%; } }
   @media only screen and (min-width: 112em) {
     :root {
       font-size: 75%; } }
@@ -79,7 +82,7 @@ body {
         letter-spacing: 0.2rem; } }
     @media only screen and (max-width: 37.5em) {
       .heading-primary--main {
-        font-size: 1.7rem; } }
+        font-size: 2.5rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 1.7rem;
@@ -96,8 +99,7 @@ body {
         letter-spacing: 0.48rem; } }
     @media only screen and (max-width: 37.5em) {
       .heading-primary--sub {
-        font-size: 1rem;
-        letter-spacing: 0.1rem; } }
+        letter-spacing: 0.15rem; } }
 
 .heading-secondary {
   font-size: 3rem;
@@ -145,7 +147,8 @@ body {
       font-size: 2.8rem; } }
   @media only screen and (max-width: 37.5em) {
     .heading-tertiary {
-      font-size: 1.8rem; } }
+      font-size: 1.8rem;
+      letter-spacing: 0; } }
   .heading-tertiary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.2); }
@@ -153,21 +156,27 @@ body {
 .paragraph {
   font-size: 1.6rem;
   text-align: justify; }
+  @media only screen and (max-width: 37.5em) {
+    .paragraph {
+      font-size: 1.7rem; } }
 
 .u-margin-bottom-small {
   margin-bottom: 1.5rem !important; }
 
 .u-margin-bottom-large {
   margin-bottom: 2.2rem !important; }
-  @media only screen and (max-width: 56.25em) {
-    .u-margin-bottom-large {
-      margin-bottom: 1.5rem !important; } }
 
 .u-margin-bottom-extraLarge {
   margin-bottom: 8rem !important; }
+  @media only screen and (max-width: 37.5em) {
+    .u-margin-bottom-extraLarge {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-top-extraLarge {
   margin-top: 8rem; }
+  @media only screen and (max-width: 37.5em) {
+    .u-margin-top-extraLarge {
+      margin-bottom: 5rem !important; } }
 
 .u-margin-top-small {
   margin-top: 2rem; }
@@ -278,8 +287,10 @@ body {
       padding: 1rem 1rem; } }
   @media only screen and (max-width: 37.5em) {
     .btn-text:link, .btn-text:visited {
-      font-size: 1.1rem;
-      margin-bottom: 1rem; } }
+      font-size: 1.4rem;
+      padding: 1.5rem 3rem;
+      letter-spacing: 0.2rem;
+      margin-bottom: 1.5rem; } }
 
 .btn-text::before {
   content: "";
@@ -335,7 +346,8 @@ body {
   @media only screen and (max-width: 37.5em) {
     .btn-secondary:link, .btn-secondary:visited {
       margin-left: 0;
-      font-size: 1rem;
+      font-size: 1.4rem;
+      padding: 1.5rem;
       display: block; } }
 
 .btn-secondary span:nth-child(1) {
@@ -481,9 +493,6 @@ body {
     .card__details {
       float: none;
       width: 100%; } }
-  @media only screen and (max-width: 37.5em) {
-    .card__details {
-      height: 45rem; } }
 
 .card__picture {
   float: left;
@@ -516,6 +525,9 @@ body {
 
 .card:hover .card__picture--img {
   transform: scale(1.1); }
+  @media only screen and (max-width: 37.5em) {
+    .card:hover .card__picture--img {
+      transform: scale(1); } }
 
 .card__heading {
   padding: 5rem 0 0 0;
@@ -530,6 +542,9 @@ body {
     box-decoration-break: clone; }
     .card__heading-span--1 {
       background-image: linear-gradient(to right bottom, rgba(255, 119, 48, 0.4), rgba(255, 185, 0, 0.4)); }
+  @media only screen and (max-width: 37.5em) {
+    .card__heading {
+      font-size: 2.5rem; } }
 
 .composition {
   position: relative;
@@ -563,9 +578,6 @@ body {
         .composition__photo--2 {
           width: 50%;
           height: 50%;
-          right: 0; } }
-      @media only screen and (max-width: 37.5em) {
-        .composition__photo--2 {
           right: 5%;
           bottom: 10%; } }
   .composition::after {
@@ -706,6 +718,9 @@ body {
     transform: translateY(-1.8rem) scale(1.1);
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
     color: #000; }
+    @media only screen and (max-width: 37.5em) {
+      .services-box:hover, .services-box:active {
+        transform: translateY(-0.5rem) scale(1); } }
   @media only screen and (max-width: 75em) {
     .services-box {
       padding: 3rem 1rem;
@@ -713,10 +728,13 @@ body {
   @media only screen and (max-width: 56.25em) {
     .services-box {
       font-size: 1.6rem;
-      padding: 7rem 3.5rem; } }
+      padding: 7rem 3.5rem;
+      margin: 0; } }
   @media only screen and (max-width: 37.5em) {
     .services-box {
-      padding: 4.5rem 2.5rem; } }
+      font-size: 1.7rem;
+      padding: 4rem 2rem;
+      margin: 0; } }
   .services-box__icon {
     height: 6rem;
     width: 6rem;
@@ -869,20 +887,20 @@ body {
         padding: 2rem; } }
     @media only screen and (max-width: 37.5em) {
       .testimonials-card__content {
-        padding: 1rem; } }
+        padding: 1.5rem; } }
   .testimonials-card__tittle {
     font-size: 1.5rem;
     font-weight: 700;
     text-transform: uppercase; }
     @media only screen and (max-width: 37.5em) {
       .testimonials-card__tittle {
-        font-size: 1.3rem; } }
+        font-size: 1.5rem; } }
   .testimonials-card__paragraph {
     font-size: 1.3rem;
     text-align: justify; }
     @media only screen and (max-width: 37.5em) {
       .testimonials-card__paragraph {
-        font-size: 1.2rem; } }
+        font-size: 1.5rem; } }
   .testimonials-card:hover .testimonials-card__content {
     transform: scaleY(1);
     transform-origin: center; }
@@ -932,8 +950,8 @@ body {
     font-size: 1.6rem;
     font-weight: 700;
     text-transform: uppercase;
-    position: relative;
-    text-align: center; }
+    text-align: center;
+    letter-spacing: 0.2rem; }
   .footer__social {
     text-align: center;
     margin-bottom: 8rem; }
@@ -946,7 +964,6 @@ body {
     height: 3rem;
     display: inline-block;
     margin-right: 2rem;
-    background-color: #000;
     fill: #c155c5;
     transition: all 0.2s; }
     .footer__icon:hover {
