--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -14,7 +14,9 @@
   @include respond(tab-port) {
     font-size: 50%;
   }
-
+  @include respond(phone) {
+    font-size: 36%;
+  }
   @include respond(large-desktop) {
     font-size: 75%;
   }
