--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,7 +28,7 @@ body {
       letter-spacing: 0.2rem;
     }
     @include respond(phone) {
-      font-size: 1.7rem;
+      font-size: 2.5rem;
     }
   }
   &--sub {
@@ -48,8 +48,7 @@ body {
       letter-spacing: 0.48rem;
     }
     @include respond(phone) {
-      font-size: 1rem;
-      letter-spacing: 0.1rem;
+      letter-spacing: 0.15rem;
     }
   }
 }
@@ -114,6 +113,7 @@ body {
   }
   @include respond(phone) {
     font-size: 1.8rem;
+    letter-spacing: 0;
   }
 
   &:hover {
@@ -125,4 +125,7 @@ body {
 .paragraph {
   font-size: 1.6rem;
   text-align: justify;
+  @include respond(phone) {
+    font-size: 1.7rem;
+  }
 }
