--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -111,8 +111,10 @@
       padding: 1rem 1rem;
     }
     @include respond(phone) {
-      font-size: 1.1rem;
-      margin-bottom: 1rem;
+      font-size: 1.4rem;
+      padding: 1.5rem 3rem;
+      letter-spacing: 0.2rem;
+      margin-bottom: 1.5rem;
     }
   }
 
@@ -179,7 +181,8 @@
     }
     @include respond(phone) {
       margin-left: 0;
-      font-size: 1rem;
+      font-size: 1.4rem;
+      padding: 1.5rem;
       display: block;
     }
   }
