--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -21,9 +21,6 @@
       float: none;
       width: 100%;
     }
-    @include respond(phone) {
-      height: 45rem;
-    }
   }
   &__picture {
     float: left;
@@ -63,6 +60,9 @@
   }
   &:hover &__picture--img {
     transform: scale(1.1);
+    @include respond(phone) {
+      transform: scale(1);
+    }
   }
 
   &__heading {
@@ -85,6 +85,9 @@
           rgba($color-secondary-light, 0.4)
         );
       }
+    }
+    @include respond(phone) {
+      font-size: 2.5rem;
     }
   }
 }
