--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -21,6 +21,9 @@
     transform: translateY(-1.8rem) scale(1.1);
     box-shadow: 0 1.5rem 4rem rgba($color-deep, 0.2);
     color: $color-deep;
+    @include respond(phone) {
+      transform: translateY(-0.5rem) scale(1);
+    }
   }
   padding: 4.5rem 2.5rem;
   text-align: center;
@@ -32,9 +35,12 @@
   @include respond(tab-port) {
     font-size: 1.6rem;
     padding: 7rem 3.5rem;
+    margin: 0;
   }
   @include respond(phone) {
-    padding: 4.5rem 2.5rem;
+    font-size: 1.7rem;
+    padding: 4rem 2rem;
+    margin: 0;
   }
 
   // color: $color-dark-white;
