--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -31,6 +31,6 @@
 .u-text {
   text-align: center !important;
 }
-.text-color {
-  color: $color-grey-dark-3 !important;
-}
+// .text-color {
+//   color: $color-grey-dark-3 !important;
+// }
