--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -14,7 +14,7 @@
 #section-services {
   background-image: linear-gradient(
       to right,
-      rgba($color-primary-light, 0.6),
+      rgba($color-primary-dark, 0.6),
       rgba($color-primary-dark, 0.6)
     ),
     url(../img/nature1.jpg);
