--- a/sass/components/_testimonial.scss
+++ b/sass/components/_testimonial.scss
@@ -52,7 +52,7 @@
         background-image: linear-gradient(
           to right bottom,
           rgba($color-primary-dark, 0.8),
-          rgba($color-primary-light, 0.8)
+          rgba($color-primary-dark, 0.8)
         );
       }
     }
@@ -62,7 +62,7 @@
     top: 50%;
     left: 0;
     padding: 3rem;
-    background-color: rgba($color-primary, 0.8);
+    background-color: rgba($color-primary-dark, 0.8);
     color: $color-light-white;
     width: 80%;
     transform: scaleY(0);
