--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,16 +1,18 @@
 .header {
   position: relative;
-  height: 80vh;
+  height: 95vh;
+  margin: 2rem;
   background-image: linear-gradient(
       to right,
-      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8),
       rgba($color-primary-dark, 0.8)
     ),
-    url(../img/bg22.jpg);
+    url(../img/snow.jpg);
   background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
-  border-radius: 10% 7% 26% / 0% 0% 0% 15%;
+  background-position: bottom;
+  // background-attachment: fixed;
+  // border-radius: 10% 7% 26% / 0% 0% 0% 15%;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
   @include respond(tab-port) {
     height: 95vh;
     border-radius: 10% 9% 26% / 0% 0% 0% 13%;
@@ -21,9 +23,35 @@
 
   &__content {
     position: absolute;
-    top: 45%;
+    top: 42%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+  }
+
+  &__logo-box {
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+  }
+  &__tittle {
+    &--name {
+      &:link,
+      &:visited {
+        font-size: 1rem;
+        color: $color-white;
+        letter-spacing: 0.1rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-style: italic;
+        font-family: "Pacifico", cursive;
+      }
+    }
+  }
+  &__photo {
+    text-align: center;
+  }
+  &__img {
+    height: 3.5rem;
   }
 }
