--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,20 +1,7 @@
 .navigation {
   background-color: $color-primary-dark;
-  min-height: 5vh;
-  padding: 2rem;
-  // line-height: 5vh;
   text-align: center;
-  z-index: 1000;
-  position: relative;
-  @include clearfix;
-  @include respond(tab-port) {
-    background-color: none;
-    min-height: 0;
-    padding: 0;
-    line-height: 0;
-    text-align: none;
-  }
-
+  // overflow: hidden;
   &__checkbox {
     display: none;
   }
@@ -24,169 +11,121 @@
   &__background {
     display: none;
   }
-  @include respond(tab-port) {
-    &__checkbox {
-      display: none;
-    }
-    &__button {
-      display: block;
-      width: 7rem;
-      height: 7rem;
-      position: fixed;
-      top: 2rem;
-      right: 4rem;
-      border-radius: 50%;
-      background-color: $color-white;
-      box-shadow: 0 1rem 1.5rem rgba($color-deep, 0.2);
-      cursor: pointer;
-      z-index: 2000;
-    }
-    &__background {
-      display: block;
-      height: 6rem;
-      width: 6rem;
-      position: fixed;
-      top: 2rem;
-      right: 4rem;
-      border-radius: 50%;
-      background-image: radial-gradient(
-        rgba($color-primary-light, 0.8),
-        rgba($color-primary-dark, 0.8)
-      );
-      box-shadow: 0 1rem 2rem rgba($color-deep, 0.2);
-      z-index: 1000;
-      transform: scale(0);
-      transition: transform 0.9s cubic-bezier(0.86, 0, 0.07, 1);
-    }
-    &__icon {
-      margin-top: 3.5rem;
-      position: relative;
-      &,
-      &::before,
-      &::after {
-        display: inline-block;
-        width: 3rem;
-        height: 2px;
-        background-color: $color-grey-dark-3;
-      }
-      &::before,
-      &::after {
-        content: "";
-        display: inline-block;
-        position: absolute;
-        left: 0;
-        transition: all 0.45s;
-      }
-      &::before {
-        top: -0.8rem;
-      }
-      &::after {
-        top: 0.8rem;
-      }
-    }
-    &__checkbox:checked ~ &__background {
-      transform: scale(80);
-    }
-    &__checkbox:checked ~ &__nav {
-      opacity: 1;
-      width: 100%;
-    }
-    &__checkbox:checked + &__button &__icon {
-      background-color: transparent;
-    }
-    &__checkbox:checked ~ &__button &__icon::after {
-      transform: rotate(135deg);
-      top: 0;
-    }
-    &__checkbox:checked ~ &__button &__icon::before {
-      transform: rotate(-135deg);
-      top: 0;
-    }
+
+  &__checkbox {
+    display: none;
   }
-  &__logo {
-    float: left;
-    width: 30%;
-    @include respond(tab-port) {
-      float: none;
+  &__button {
+    display: block;
+    width: 5.5rem;
+    height: 5rem;
+    position: fixed;
+    top: 4rem;
+    right: 4rem;
+    background-color: $color-white;
+    box-shadow: 0 1rem 1.5rem rgba($color-deep, 0.2);
+    cursor: pointer;
+    z-index: 2000;
+    animation: navigation-rotate 4s;
+  }
+  &__background {
+    display: block;
+    height: 5rem;
+    width: 5rem;
+    position: fixed;
+    top: 4rem;
+    right: 4rem;
+    background-image: radial-gradient(
+      rgba($color-primary-dark, 0.9),
+      rgba($color-primary-dark, 0.9)
+    );
+    box-shadow: 0 1rem 2rem rgba($color-deep, 0.2);
+    z-index: 1000;
+    transform: scale(0);
+    transition: transform 0.9s cubic-bezier(0.86, 0, 0.07, 1);
+  }
+  &__icon {
+    margin-top: 2.5rem;
+    position: relative;
+    &,
+    &::before,
+    &::after {
+      display: inline-block;
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+    }
+    &::before,
+    &::after {
+      content: "";
+      display: inline-block;
       position: absolute;
-      top: 4rem;
-      left: 4rem;
+      transition: all 0.45s;
     }
-  }
-  &__tittle {
-    &--name {
-      &:link,
-      &:visited {
-        font-size: 1rem;
-        color: $color-white;
-        letter-spacing: 0.1rem;
-        text-decoration: none;
-        text-transform: uppercase;
-        font-style: italic;
-        font-family: "Pacifico", cursive;
-      }
-      @include respond(phone) {
-        display: none;
-      }
-    }
-  }
-  &__img {
-    height: 3.5rem;
-    @include respond(tab-port) {
-      margin-bottom: 1rem;
-    }
-  }
-  &__nav {
-    float: left;
-    width: 70%;
-    margin-top: 1rem;
-    @include respond(tab-port) {
-      float: none;
-      width: 0;
-      height: 100vh;
-      position: fixed;
-      top: 0;
+    &::before {
+      width: 1.5rem;
+      top: -0.8rem;
       left: 0;
-      z-index: 1500;
-      opacity: 0;
-      transition: all 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
+    &::after {
+      width: 1.5rem;
+      right: 0;
+      top: 0.8rem;
+    }
+  }
+  &__checkbox:checked ~ &__background {
+    transform: scale(80);
+  }
+  &__checkbox:checked ~ &__nav {
+    opacity: 1;
+    width: 100%;
+  }
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;
+  }
+  &__checkbox:checked ~ &__button &__icon::after {
+    transform: rotate(220deg);
+    width: 3rem;
+    top: 0;
+  }
+  &__checkbox:checked ~ &__button &__icon::before {
+    transform: rotate(-220deg);
+    width: 3rem;
+    top: 0;
+  }
+
+  &__nav {
+    width: 0;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1500;
+    opacity: 0;
+    transition: all 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
   &__lists {
     list-style: none;
-    @include respond(tab-port) {
-      text-align: center;
-      width: 100%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      // right: 0;
-      transform: translate(-50%, -50%);
-      // transform: translate(31%, -50%);
-    }
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   &__list {
-    display: inline-block;
-    @include respond(tab-port) {
-      display: block;
-      margin-bottom: 2rem;
-    }
-    &:not(:last-child) {
-      margin-right: 1.7rem;
-    }
+    margin: 1rem;
   }
   &__link {
     &:link,
     &:visited {
       display: inline-block;
-      font-size: 1.4rem;
-      letter-spacing: 0.1rem;
-      font-weight: 600;
+      font-size: 2.7rem;
+      padding: 1rem 2rem;
+      font-weight: 400;
       text-decoration: none;
-      color: $color-deep;
+      color: $color-light-white;
       text-transform: uppercase;
-      padding: 1rem 4.2rem;
-
       background-image: linear-gradient(
         120deg,
         transparent 0%,
@@ -195,18 +134,28 @@
       );
       background-size: 250%;
 
-      transition: all 0.4s;
-      @include respond(tab-port) {
-        font-size: 2rem;
-        padding: 3rem 4.2rem;
-      }
+      transition: all 0.6s;
     }
 
     &:hover,
-    &:active,
-    &--active {
+    &:active {
+      color: $color-primary;
       background-position: 100%;
-      transform: translateX(1.5rem) scale(1.1);
+      transform: translateX(1.5rem) scale(1.03);
     }
+    span {
+      display: inline-block;
+      margin-right: 1rem;
+    }
+  }
+}
+@keyframes navigation-rotate {
+  0% {
+    transform: translateX(-150rem) rotate(1800deg);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0) rotate(0);
+    opacity: 1;
   }
 }
