--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -2,7 +2,7 @@
   margin-bottom: 1.5rem !important;
 }
 .u-margin-bottom-large {
-  margin-bottom: 2.2rem !important;
+  margin-bottom: 4rem !important;
 }
 
 .u-margin-bottom-extraLarge {
@@ -31,6 +31,84 @@
 .u-text {
   text-align: center !important;
 }
-// .text-color {
-//   color: $color-grey-dark-3 !important;
-// }
+.text-color {
+  color: $color-white !important;
+}
+// stories
+.story {
+  position: relative;
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba($color-deep, 0.1);
+  background-color: rgba($color-white, 0.6);
+  padding: 6rem;
+  padding-left: 9rem;
+  border-radius: 3px;
+  font-size: $default-font-size;
+  transform: skewX(-12deg);
+
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
+
+  &__shape {
+    width: 15rem;
+    height: 15rem;
+    background-color: green;
+    float: left;
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    // border-radius: 50%;
+    // margin-right: 3rem;
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative;
+
+    @include respond(phone) {
+      transform: translateX(-3rem) skewX(0);
+    }
+  }
+  &__image {
+    width: 100%;
+    height: auto;
+    transform: translateX(1rem) scale(1.4);
+    backface-visibility: hidden;
+    overflow: hidden;
+    transition: all 0.5s;
+  }
+  &__text {
+    transform: skewX(12deg);
+
+    @include respond(phone) {
+      transform: skewX(0);
+    }
+  }
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    font-size: 1.7rem;
+    text-align: center;
+    text-transform: uppercase;
+    color: $color-white;
+    opacity: 0;
+    transition: all 0.5s;
+    backface-visibility: hidden;
+  }
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+  &:hover &__image {
+    transform: translateX(0) scale(1);
+    filter: blur(3px) brightness(80%);
+  }
+}
