--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -24,7 +24,7 @@
       height: 60%;
       object-fit: cover;
       position: absolute;
-      bottom: 9%;
+      bottom: 15%;
       right: -10%;
       @include respond(phone) {
         width: 50%;
@@ -53,7 +53,7 @@
 }
 
 .about {
-  margin-top: 5rem;
+  // margin-top: 5rem;
   padding-left: 5rem;
   @include respond(tab-land) {
     margin-top: 0;
